--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.2
+autopep8==1.6.0
 backcall==0.2.0
 beautifulsoup4==4.9.3
+cachetools==5.0.0
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -9,6 +11,9 @@ debugpy==1.4.1
 decorator==5.0.9
 entrypoints==0.3
 fullGSapi==1.3.11
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+gspread==5.1.1
 idna==3.2
 ipykernel==6.2.0
 ipython==7.26.0
@@ -18,12 +23,16 @@ jupyter-client==7.0.1
 jupyter-core==4.7.1
 matplotlib-inline==0.1.2
 nest-asyncio==1.5.1
+oauthlib==3.2.0
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.20
 ptyprocess==0.7.0
 py-mini-racer==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.20
 Pygments==2.10.0
 python-dateutil==2.8.2
@@ -31,8 +40,11 @@ python-dotenv==0.19.0
 PyYAML==5.4.1
 pyzmq==22.2.1
 requests==2.26.0
+requests-oauthlib==1.3.1
+rsa==4.8
 six==1.16.0
 soupsieve==2.2.1
+toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.6
